--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -82,6 +82,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="LookHorizontal",Scale=1.000000,Key=MouseX)
